--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -84,6 +84,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:cornerRadius="8sp"
+            app:layout_constraintVertical_bias="0.99"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
